--- a/cassandra-tests/pom.xml
+++ b/cassandra-tests/pom.xml
@@ -21,7 +21,7 @@
   <parent>
     <groupId>org.apache.zipkin.brave.cassandra</groupId>
     <artifactId>brave-cassandra-parent</artifactId>
-    <version>0.10.2</version>
+    <version>0.10.3-SNAPSHOT</version>
   </parent>
   <modelVersion>4.0.0</modelVersion>
 
