--- a/pom.xml
+++ b/pom.xml
@@ -28,7 +28,7 @@
 
   <groupId>org.apache.zipkin.brave.cassandra</groupId>
   <artifactId>brave-cassandra-parent</artifactId>
-  <version>0.10.2</version>
+  <version>0.10.3-SNAPSHOT</version>
   <packaging>pom</packaging>
 
   <modules>
@@ -80,7 +80,7 @@
     <url>https://github.com/apache/incubator-zipkin-brave-cassandra</url>
     <connection>scm:git:https://github.com/apache/incubator-zipkin-brave-cassandra.git</connection>
     <developerConnection>scm:git:https://github.com/apache/incubator-zipkin-brave-cassandra.git</developerConnection>
-    <tag>v0.10.2</tag>
+    <tag>HEAD</tag>
   </scm>
 
   <!-- Developer section is needed for Maven Central, but doesn't need to include each person -->
