--- a/pom.xml
+++ b/pom.xml
@@ -28,34 +28,20 @@
     <module>cassandra-tests</module>
   </modules>
 
-  <properties>
-    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <project.build.resourceEncoding>UTF-8</project.build.resourceEncoding>
-
-    <!-- default bytecode version for src/main -->
-    <main.java.version>1.8</main.java.version>
-    <main.signature.artifact>java18</main.signature.artifact>
-
-    <main.basedir>${project.basedir}</main.basedir>
-    <brave.version>5.13.1</brave.version>
-
-    <cassandra-driver-core.version>3.10.2</cassandra-driver-core.version>
-
-    <assertj.version>3.18.0</assertj.version>
-    <junit.version>4.13.1</junit.version>
-    <log4j.version>2.13.3</log4j.version>
-
-    <!-- override to set exclusions per-project -->
-    <errorprone.args />
-    <errorprone.version>2.4.0</errorprone.version>
-
-    <!-- TODO: cleanup any redundant ignores now also in the 4.0 release (once final) -->
-    <license-maven-plugin.version>4.0.rc2</license-maven-plugin.version>
-    <maven-failsafe-plugin.version>3.0.0-M5</maven-failsafe-plugin.version>
-    <maven-javadoc-plugin.version>3.2.0</maven-javadoc-plugin.version>
-    <maven-source-plugin.version>3.2.1</maven-source-plugin.version>
-    <nexus-staging-maven-plugin.version>1.6.8</nexus-staging-maven-plugin.version>
-  </properties>
+  <distributionManagement>
+    <snapshotRepository>
+      <id>ossrh</id>
+      <url>https://oss.sonatype.org/content/repositories/snapshots</url>
+    </snapshotRepository>
+    <repository>
+      <id>ossrh</id>
+      <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
+    </repository>
+  </distributionManagement>
+  <issueManagement>
+    <system>GitHub</system>
+    <url>https://github.com/openzipkin-contrib/brave-kafka-interceptor/issues</url>
+  </issueManagement>
 
   <name>Brave Cassandra (Parent)</name>
   <description>Tracing instrumentation for Apache Cassandra (Parent)</description>
@@ -78,8 +64,7 @@
   <scm>
     <url>https://github.com/openzipkin/brave-cassandra</url>
     <connection>scm:git:https://github.com/openzipkin/brave-cassandra.git</connection>
-    <developerConnection>scm:git:https://github.com/openzipkin/brave-cassandra.git
-    </developerConnection>
+    <developerConnection>scm:git:https://github.com/openzipkin/brave-cassandra.git</developerConnection>
     <tag>HEAD</tag>
   </scm>
 
@@ -92,21 +77,44 @@
     </developer>
   </developers>
 
-  <distributionManagement>
-    <snapshotRepository>
-      <id>ossrh</id>
-      <url>https://oss.sonatype.org/content/repositories/snapshots</url>
-    </snapshotRepository>
-    <repository>
-      <id>ossrh</id>
-      <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
-    </repository>
-  </distributionManagement>
+  <properties>
+    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <project.build.resourceEncoding>UTF-8</project.build.resourceEncoding>
+    <project.build.outputEncoding>UTF-8</project.build.outputEncoding>
+    <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 
-  <issueManagement>
-    <system>Github</system>
-    <url>https://github.com/openzipkin/brave-cassandra/issues</url>
-  </issueManagement>
+    <main.basedir>${project.basedir}</main.basedir>
+    <main.signature.artifact>java18</main.signature.artifact>
+
+    <cassandra-driver-core.version>3.10.2</cassandra-driver-core.version>
+    <brave.version>5.13.1</brave.version>
+
+    <junit.version>4.13.1</junit.version>
+    <junit-jupiter.version>5.7.0</junit-jupiter.version>
+    <assertj.version>3.18.0</assertj.version>
+
+    <!-- override to set exclusions per-project -->
+    <errorprone.args />
+    <errorprone.version>2.4.0</errorprone.version>
+    <log4j.version>2.14.0</log4j.version>
+
+    <animal-sniffer-maven-plugin.version>1.19</animal-sniffer-maven-plugin.version>
+    <go-offline-maven-plugin.version>1.2.7</go-offline-maven-plugin.version>
+    <!-- TODO: cleanup any redundant ignores now also in the 4.0 release (once final) -->
+    <license-maven-plugin.version>4.0.rc2</license-maven-plugin.version>
+    <maven-compiler-plugin.version>3.8.1</maven-compiler-plugin.version>
+    <maven-install-plugin.version>3.0.0-M1</maven-install-plugin.version>
+    <!-- Use same version as https://github.com/openzipkin/docker-java -->
+    <maven-dependency-plugin.version>3.1.2</maven-dependency-plugin.version>
+    <maven-deploy-plugin.version>3.0.0-M1</maven-deploy-plugin.version>
+    <maven-release-plugin.version>3.0.0-M1</maven-release-plugin.version>
+    <maven-source-plugin.version>3.2.1</maven-source-plugin.version>
+    <maven-javadoc-plugin.version>3.2.0</maven-javadoc-plugin.version>
+    <maven-jar-plugin.version>3.2.0</maven-jar-plugin.version>
+    <maven-surefire-plugin.version>3.0.0-M5</maven-surefire-plugin.version>
+    <maven-enforcer-plugin.version>3.0.0-M3</maven-enforcer-plugin.version>
+    <nexus-staging-maven-plugin.version>1.6.8</nexus-staging-maven-plugin.version>
+  </properties>
 
   <dependencyManagement>
     <dependencies>
@@ -138,6 +146,9 @@
   </dependencyManagement>
 
   <dependencies>
+    <!-- Only add absolutely required dependencies as compile scope. Adding more can pin versions,
+         causing problems for end users difficult to unravel. -->
+
     <dependency>
       <groupId>io.zipkin.brave</groupId>
       <artifactId>brave</artifactId>
@@ -145,15 +156,15 @@
     </dependency>
 
     <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <scope>test</scope>
-      <version>${junit.version}</version>
-    </dependency>
-    <dependency>
       <groupId>io.zipkin.brave</groupId>
       <artifactId>brave-tests</artifactId>
       <version>${brave.version}</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.junit.jupiter</groupId>
+      <artifactId>junit-jupiter</artifactId>
+      <version>${junit-jupiter.version}</version>
       <scope>test</scope>
     </dependency>
     <dependency>
@@ -162,21 +173,21 @@
       <version>${assertj.version}</version>
       <scope>test</scope>
     </dependency>
-    <!-- route jul over log4j2 during integration tests -->
+    <!-- route jul over log4j2 during tests -->
     <dependency>
       <groupId>org.apache.logging.log4j</groupId>
       <artifactId>log4j-jul</artifactId>
       <version>${log4j.version}</version>
       <scope>test</scope>
     </dependency>
-    <!-- route log4j over log4j2 during integration tests -->
+    <!-- route log4j over log4j2 during tests -->
     <dependency>
       <groupId>org.apache.logging.log4j</groupId>
       <artifactId>log4j-1.2-api</artifactId>
       <version>${log4j.version}</version>
       <scope>test</scope>
     </dependency>
-    <!-- route slf4j over log4j2 during integration tests -->
+    <!-- route slf4j over log4j2 during tests -->
     <dependency>
       <groupId>org.apache.logging.log4j</groupId>
       <artifactId>log4j-slf4j-impl</artifactId>
@@ -202,28 +213,70 @@
         <plugin>
           <groupId>de.qaware.maven</groupId>
           <artifactId>go-offline-maven-plugin</artifactId>
-          <version>1.2.7</version>
+          <version>${go-offline-maven-plugin.version}</version>
+          <configuration>
+            <!-- Add dependencies indirectly referenced by build plugins -->
+            <dynamicDependencies>
+              <DynamicDependency>
+                <groupId>org.codehaus.mojo.signature</groupId>
+                <artifactId>${main.signature.artifact}</artifactId>
+                <version>1.0</version>
+                <type>signature</type>
+                <repositoryType>MAIN</repositoryType>
+              </DynamicDependency>
+              <DynamicDependency>
+                <groupId>com.mycila</groupId>
+                <artifactId>license-maven-plugin-git</artifactId>
+                <version>${license-maven-plugin.version}</version>
+                <repositoryType>MAIN</repositoryType>
+              </DynamicDependency>
+              <DynamicDependency>
+                <groupId>com.google.errorprone</groupId>
+                <artifactId>error_prone_core</artifactId>
+                <version>${errorprone.version}</version>
+                <repositoryType>MAIN</repositoryType>
+              </DynamicDependency>
+              <DynamicDependency>
+                <groupId>org.apache.maven.surefire</groupId>
+                <artifactId>surefire-junit-platform</artifactId>
+                <version>${maven-surefire-plugin.version}</version>
+                <repositoryType>PLUGIN</repositoryType>
+              </DynamicDependency>
+            </dynamicDependencies>
+          </configuration>
         </plugin>
 
+        <!-- maven-dependency-plugin:get should use a recent version. -->
         <plugin>
-          <artifactId>maven-remote-resources-plugin</artifactId>
-          <version>1.7.0</version>
-        </plugin>
-
-        <plugin>
-          <artifactId>maven-install-plugin</artifactId>
-          <version>3.0.0-M1</version>
+          <artifactId>maven-dependency-plugin</artifactId>
+          <version>${maven-dependency-plugin.version}</version>
         </plugin>
 
         <!-- Uploads occur as a last step (which also adds checksums) -->
         <plugin>
           <artifactId>maven-deploy-plugin</artifactId>
-          <version>3.0.0-M1</version>
+          <version>${maven-deploy-plugin.version}</version>
+        </plugin>
+
+        <plugin>
+          <artifactId>maven-install-plugin</artifactId>
+          <version>${maven-install-plugin.version}</version>
+        </plugin>
+
+        <plugin>
+          <artifactId>maven-jar-plugin</artifactId>
+          <version>${maven-jar-plugin.version}</version>
+          <configuration>
+            <archive>
+              <!-- prevents huge pom file from also being added to the jar under META-INF/maven -->
+              <addMavenDescriptor>false</addMavenDescriptor>
+            </archive>
+          </configuration>
         </plugin>
 
         <plugin>
           <artifactId>maven-release-plugin</artifactId>
-          <version>3.0.0-M1</version>
+          <version>${maven-release-plugin.version}</version>
           <configuration>
             <useReleaseProfile>false</useReleaseProfile>
             <releaseProfiles>release</releaseProfiles>
@@ -242,25 +295,25 @@
 
     <plugins>
       <plugin>
-        <inherited>true</inherited>
         <artifactId>maven-compiler-plugin</artifactId>
-        <version>3.8.1</version>
+        <version>${maven-compiler-plugin.version}</version>
+        <inherited>true</inherited>
         <configuration>
           <source>1.8</source>
           <target>1.8</target>
-          <forceJavacCompilerUse>true</forceJavacCompilerUse>
+          <fork>true</fork>
           <showWarnings>true</showWarnings>
         </configuration>
       </plugin>
 
       <plugin>
-        <artifactId>maven-jar-plugin</artifactId>
-        <version>3.2.0</version>
+        <artifactId>maven-remote-resources-plugin</artifactId>
+        <version>1.7.0</version>
       </plugin>
 
       <plugin>
         <artifactId>maven-surefire-plugin</artifactId>
-        <version>${maven-failsafe-plugin.version}</version>
+        <version>${maven-surefire-plugin.version}</version>
         <configuration>
           <!-- Ensure scope leak cause ends up in the console -->
           <trimStackTrace>false</trimStackTrace>
@@ -273,7 +326,7 @@
       </plugin>
       <plugin>
         <artifactId>maven-failsafe-plugin</artifactId>
-        <version>${maven-failsafe-plugin.version}</version>
+        <version>${maven-surefire-plugin.version}</version>
         <configuration>
           <!-- Try to prevent flakes in CI -->
           <reuseForks>false</reuseForks>
@@ -299,11 +352,14 @@
         </executions>
       </plugin>
 
+      <!-- Ensure no Java 9+ api usage -->
       <plugin>
         <groupId>org.codehaus.mojo</groupId>
         <artifactId>animal-sniffer-maven-plugin</artifactId>
-        <version>1.19</version>
+        <version>${animal-sniffer-maven-plugin.version}</version>
         <configuration>
+          <checkTestClasses>false</checkTestClasses>
+          <skip>${skipTests}</skip>
           <signature>
             <groupId>org.codehaus.mojo.signature</groupId>
             <artifactId>${main.signature.artifact}</artifactId>
@@ -320,24 +376,71 @@
       </plugin>
 
       <plugin>
+        <artifactId>maven-enforcer-plugin</artifactId>
+        <version>${maven-enforcer-plugin.version}</version>
+        <executions>
+          <execution>
+            <id>enforce-java</id>
+            <goals>
+              <goal>enforce</goal>
+            </goals>
+            <configuration>
+              <rules>
+                <requireJavaVersion>
+                  <version>[11,16)</version>
+                </requireJavaVersion>
+              </rules>
+            </configuration>
+          </execution>
+        </executions>
+      </plugin>
+
+      <plugin>
         <groupId>com.mycila</groupId>
         <artifactId>license-maven-plugin</artifactId>
         <version>${license-maven-plugin.version}</version>
         <configuration>
+          <skip>${skipTests}</skip>
           <header>${main.basedir}/src/etc/header.txt</header>
           <mapping>
             <!-- Don't use javadoc style as this makes code formatters break it by adding tags! -->
             <java>SLASHSTAR_STYLE</java>
+            <!-- build-bin/docker -->
+            <block_on_health>SCRIPT_STYLE</block_on_health>
+            <configure_docker>SCRIPT_STYLE</configure_docker>
+            <configure_docker_push>SCRIPT_STYLE</configure_docker_push>
+            <docker_arch>SCRIPT_STYLE</docker_arch>
+            <docker_args>SCRIPT_STYLE</docker_args>
+            <docker_build>SCRIPT_STYLE</docker_build>
+            <docker_push>SCRIPT_STYLE</docker_push>
+            <!-- build-bin/git -->
+            <login_git>SCRIPT_STYLE</login_git>
+            <version_from_trigger_tag>SCRIPT_STYLE</version_from_trigger_tag>
+            <!-- build-bin/gpg -->
+            <configure_gpg>SCRIPT_STYLE</configure_gpg>
+            <!-- build-bin/maven -->
+            <maven_build_or_unjar>SCRIPT_STYLE</maven_build_or_unjar>
+            <maven_deploy>SCRIPT_STYLE</maven_deploy>
+            <maven_go_offline>SCRIPT_STYLE</maven_go_offline>
+            <maven_release>SCRIPT_STYLE</maven_release>
+            <maven_unjar>SCRIPT_STYLE</maven_unjar>
           </mapping>
           <excludes>
-            <exclude>.travis.yml</exclude>
+            <exclude>.docker.env</exclude>
             <exclude>.gitignore</exclude>
+            <exclude>.editorconfig</exclude>
             <exclude>.mvn/**</exclude>
             <exclude>mvnw*</exclude>
             <exclude>etc/header.txt</exclude>
             <exclude>**/.idea/**</exclude>
             <exclude>LICENSE</exclude>
             <exclude>**/*.md</exclude>
+            <exclude>src/test/resources/**</exclude>
+            <exclude>src/main/resources/**</exclude>
+            <exclude>**/*.puml</exclude>
+            <exclude>Makefile</exclude>
+            <exclude>.dockerignore</exclude>
+            <exclude>build-bin/*</exclude>
           </excludes>
           <strictCheck>true</strictCheck>
         </configuration>
@@ -357,38 +460,27 @@
           </execution>
         </executions>
       </plugin>
-
-      <plugin>
-        <artifactId>maven-enforcer-plugin</artifactId>
-        <version>3.0.0-M3</version>
-        <executions>
-          <execution>
-            <id>enforce-java</id>
-            <goals>
-              <goal>enforce</goal>
-            </goals>
-            <configuration>
-              <rules>
-                <!-- Can't use JDK 15 due to:
-                     com.datastax.driver.core.exceptions.ServerError: An unexpected error occurred server side on /127.0.0.1:49702: java.lang.UnsupportedOperationException: can't get field offset on a hidden class: private final org.apache.cassandra.db.ClusteringComparator org.apache.cassandra.db.ClusteringComparator$$Lambda$157/0x0000000800de0040.arg$1
-                     -->
-                <requireJavaVersion>
-                  <version>[11,15)</version>
-                </requireJavaVersion>
-              </rules>
-            </configuration>
-          </execution>
-        </executions>
-      </plugin>
     </plugins>
+
+    <resources>
+      <!-- This adds the LICENSE and NOTICE file to the jar and -sources jar of each module -->
+      <resource>
+        <filtering>false</filtering>
+        <directory>${main.basedir}</directory>
+        <targetPath>META-INF/</targetPath>
+        <includes>
+          <include>LICENSE</include>
+          <include>NOTICE</include>
+        </includes>
+      </resource>
+    </resources>
   </build>
 
   <profiles>
     <profile>
-      <id>error-prone-11+</id>
+      <id>error-prone</id>
       <activation>
-        <jdk>[11,)</jdk>
-        <activeByDefault>false</activeByDefault>
+        <activeByDefault>true</activeByDefault>
       </activation>
       <build>
         <plugins>
@@ -442,6 +534,7 @@
           </plugin>
 
           <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-gpg-plugin</artifactId>
             <version>1.6</version>
             <executions>
